--- a/index.html
+++ b/index.html
@@ -504,7 +504,13 @@
                 id="email-subscribe"
               />
             </label>
-            <button class="subscribe-button" type="submit">Subscribe</button>
+
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="icon-subscribe" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -514,19 +520,68 @@
 
     <div class="backdrop is-open">
       <div class="modal">
-        <button class="modal-button" type="button">
-          <svg class="modal-button-icon" width="8" height="8">
-            <use hreff=""></use>
+        <button type="button" class="close-modal-btn">
+          <svg class="close-icon-btn" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
-        <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form class="form-modal">
-          <div class="inputs-modal">
-            <label class="lable-modal" for="name-input">Name</label>
-            <div class="input-box">
-              <input class="input-modal" type="text" name="name-input" required id="name-input" />
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-label">
+            <label for="user-name" class="modal-lable">Name</label>
+            <div class="modal-input-form">
+              <input type="text" type="user-name" class="modal-input" id="user-name" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
             </div>
           </div>
+          <div class="modal-form-label">
+            <label for="user-tel" class="modal-lable">Phone</label>
+            <div class="modal-input-form">
+              <input type="tel" type="user-tel" class="modal-input" id="user-tel" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-label">
+            <label for="user-email" class="modal-lable">Email</label>
+            <div class="modal-input-form">
+              <input type="email" type="user-email" class="modal-input" id="user-email" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-comment">
+            <label for="textarea-comment" class="modal-lable">Comment</label>
+            <textarea
+              name="textarea-comment"
+              id="textarea-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-checkbox">
+            <input
+              type="checkbox"
+              name="privacy-box"
+              class="checkbox-input visually-hidden"
+              id="privacy-box"
+              required
+            />
+            <label for="privacy-box" class="text-label-privacy">
+              <span class="checkbox-privacy">
+                <svg class="icon-checkbox" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Property-1click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="button" class="form-button">Send</button>
         </form>
       </div>
     </div>
