--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
           <div class="modal-form-label">
             <label for="user-name" class="modal-lable">Name</label>
             <div class="modal-input-form">
-              <input type="text" type="user-name" class="modal-input" id="user-name" />
-              <svg class="input-icon" width="18" height="18">
+              <input type="text" name="user-name" class="modal-input" id="user-name" />
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
@@ -539,7 +539,7 @@
           <div class="modal-form-label">
             <label for="user-tel" class="modal-lable">Phone</label>
             <div class="modal-input-form">
-              <input type="tel" type="user-tel" class="modal-input" id="user-tel" />
+              <input type="tel" name="user-name" class="modal-input" id="user-tel" />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
@@ -548,17 +548,17 @@
           <div class="modal-form-label">
             <label for="user-email" class="modal-lable">Email</label>
             <div class="modal-input-form">
-              <input type="email" type="user-email" class="modal-input" id="user-email" />
+              <input type="email" name="user-name" class="modal-input" id="user-email" />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-comment">
-            <label for="textarea-comment" class="modal-lable">Comment</label>
+            <label for="user-comment" class="modal-lable">Comment</label>
             <textarea
-              name="textarea-comment"
-              id="textarea-comment"
+              name="user-comment"
+              id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
             ></textarea>
@@ -566,12 +566,13 @@
           <div class="modal-checkbox">
             <input
               type="checkbox"
-              name="privacy-box"
+              name="user-privacy"
               class="checkbox-input visually-hidden"
-              id="privacy-box"
+              id="user-privacy"
+              value="true"
               required
             />
-            <label for="privacy-box" class="text-label-privacy">
+            <label for="user-privacy" class="text-label-privacy">
               <span class="checkbox-privacy">
                 <svg class="icon-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-Property-1click"></use>
