--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
           <div class="modal-form-label">
             <label for="user-name" class="modal-lable">Name</label>
             <div class="modal-input-form">
-              <input type="text" name="user-name" class="modal-input" id="user-name" />
+              <input type="text" name="user-name" class="modal-input" id="user-name" required />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
@@ -539,7 +539,7 @@
           <div class="modal-form-label">
             <label for="user-tel" class="modal-lable">Phone</label>
             <div class="modal-input-form">
-              <input type="tel" name="user-name" class="modal-input" id="user-tel" />
+              <input type="tel" name="user-name" class="modal-input" id="user-tel" required />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
@@ -548,7 +548,7 @@
           <div class="modal-form-label">
             <label for="user-email" class="modal-lable">Email</label>
             <div class="modal-input-form">
-              <input type="email" name="user-name" class="modal-input" id="user-email" />
+              <input type="email" name="user-name" class="modal-input" id="user-email" required />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
@@ -575,14 +575,14 @@
             <label for="user-privacy" class="text-label-privacy">
               <span class="checkbox-privacy">
                 <svg class="icon-checkbox" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Property-1click"></use>
+                  <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
               <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
           </div>
-          <button type="button" class="form-button">Send</button>
+          <button type="submit" class="form-button">Send</button>
         </form>
       </div>
     </div>
